feat: rebuild replics.json

--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div><button>НАЖМУЙ</button></div>
+    <div><button>ТестКнопка</button></div>
     <script src="../public/script.js"></script>
 </body>
 </html>
